--- a/style.css
+++ b/style.css
@@ -72,15 +72,37 @@
 		.instructions{
 			background-color: gold;
 			height: 50px;
+			margin:5px 0;
+			padding:5px;
+		}
+
+		button{
+			height: 30%;
+		    margin: 2px 5px;
+		    padding: 5px;
+		    border: 2px;
+		    border-radius: 4px;
+		    box-shadow: 1px 1px 2px #7b6161;
+		    
+		    font-size: inherit;
 		}
 
 		.forward{
-			background-color: lightgreen;
+			background-color: #43e643;
+		}
+		.forward:disabled{
+			color:white;
+			background-color: lightgreen ;
 		}
 
 		.reset{
 			background-color: red;
 		}
+		.reset:disabled{
+			color: white;
+   			background-color: #dcced0;
+		}
+		
 
 		/*DOM TOGGLED CLASSES*/
 
